plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.gifo'
version = '0.0.1-SNAPSHOT'
description = 'GIfo Backend Project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// swagger ui
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'

	// Thymeleaf 추가
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Map Struct
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	// 테스트용 H2 DB
	runtimeOnly 'com.h2database:h2'

	// Spring AI - Azure OpenAI
	implementation platform('org.springframework.ai:spring-ai-bom:2.0.0-M1')
	implementation 'org.springframework.ai:spring-ai-starter-model-azure-openai'
}

tasks.named('test') {
	useJUnitPlatform()
}
